# autohooks-plugin-ruff

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
autohooks/plugins/ruff/: __init__.py  ruff.py
tests/: pyproject.test.toml  test_ruff.py
