[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autohooks-plugin-ruff"
version = "23.4.0.dev1"
description = "An autohooks plugin for python code formatting via ruff"
license = "GPL-3.0-or-later"
authors = ["Greenbone AG <info@greenbone.net>", "jorgegomzar <jorge.gomzar@gmail.com"]
readme = "README.md"
homepage = "https://github.com/jorgegomzar/autohooks-plugin-ruff"
repository = "https://github.com/jorgegomzar/autohooks-plugin-ruff"
documentation = ""
# Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "autohooks" },
  { include = "poetry.lock", format = "sdist"},
]
keywords = [
  "git",
  "formatting",
  "linting",
  "hooks",
  "ruff",
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0.0"
pylint = ">=2.8.3,<3.0.0"
ruff = ">=0.0.272,<0.1.0"
autohooks = ">=23.4.0,<24.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autohooks-plugin-black = ">=23.4.0,<24.0.0"
autohooks-plugin-isort = ">=23.3.0,<24.0.0"
autohooks-plugin-pylint = ">=23.4.0,<24.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 80

[tool.ruff]
line-length = 160
exclude = [
    ".pytest_cache",
    "venv",
]
ignore = [
  "E731",
]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pylint]
disable = [
  "C0114", "C0116"
]

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort", "autohooks.plugins.pylint", "autohooks.plugins.ruff"]